# ispCourse2025

./: .gitignore  README.md
day1/: example1.py  pyIntro_challenge_d1s18.py  pyIntro_challenge_day1slide18.py  pyIntro_challenge_day1slide19.py  pyIntro_challenge_day1slide20.py  pyIntro_challenge_day1slide24.py  pyIntro_challenge_day1slide26.py
day2/packageStructure/: pyproject.toml  requirements.txt
day2/packageStructure/src/skprocessor/: faker.py
day2/sampleApp/: ISP2025_trainRF.ipynb  example_crud.py  example_hello.py  excersice_crudOperations.py  excersice_ml_api.py  isp2025_irisCls.pkl
day3/webapp/backend/api/: app.py
day3/webapp/backend_restful/api/: app.py  config.py
day3/webapp/backend_restful/api/resources/: rooms.py  user.py
day3/webapp/frontend/: index.html
day3/webapp/frontend/src/: tools.js
day4/manualQueries/: example.py
day5/poemsAPI/: app.py  config.py
day5/poemsAPI/resources/: poems.py  users.py
day5/poemsFrontend/: index.html
day5/poemsFrontend/src/: tools.js
day5/poemsFrontend/style/: mystyle.css
